--- a/assets/css/database-style.css
+++ b/assets/css/database-style.css
@@ -982,8 +982,8 @@ body {
         to bottom,
         #1A191A 0%,
         #1A191A 67%,
-        #f09192 67%,
-        #f09192 100%
+        #5d0d0e 67%,
+        #5d0d0e 100%
     );
 }
 
